Overflow fix

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -4082,11 +4082,10 @@ img.widget-promo-image {
 }
 /* Small Devices, Tablets */
 @media only screen and (max-width: 768px), (orientation: portrait) {
-  /* line 98, ../sass/responsive/_responsive.scss */
-  .page-navi-in {
-    max-height: 500px;
-    overflow-x: hidden;
-  }
+  /*    .page-navi-in{
+          max-height: $app-overflow-h;
+          overflow-x: hidden;
+      }*/
 }
 /* Extra Small Devices, Phones */
 /* Custom, iPhone Retina */
