--- a/app/sass/responsive/_responsive.scss
+++ b/app/sass/responsive/_responsive.scss
@@ -95,10 +95,10 @@
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px),(orientation:portrait){
-    .page-navi-in{
+/*    .page-navi-in{
         max-height: $app-overflow-h;
         overflow-x: hidden;
-    }
+    }*/
 }
 
 /* Extra Small Devices, Phones */ 
